test/files/neg/t9361.check
t9361.scala:4: error: class Foo takes type parameters
    new Foo { def tc = null.asInstanceOf[Tc[_]] }
        ^
one error found
